// Copyright 2019 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.firmware;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/firmware";

// UtilsService provides some basic operations used by firmware tests.
service UtilsService {
  // BlockingSync syncs the root device and internal device.
  rpc BlockingSync (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // ReadServoKeyboard reads from the servo's keyboard emulator and decodes the key presses.
  rpc ReadServoKeyboard (ReadServoKeyboardRequest) returns (ReadServoKeyboardResponse) {}
}

// ReadServoKeyboardRequest listens the servo's keyboard emulator for a specified duration in seconds.
message ReadServoKeyboardRequest {
  uint32 duration = 1;
}

// ReadServoKeyboardResponse provides what keys were pressed.
message ReadServoKeyboardResponse {
  repeated string keys = 1;
}
